tests/negative/gold/importC_test.gold
tests/negative/importC_test.toit:5:1: error: Failed to import '.relative-dir.dir'
import .relative_dir.dir as pre
^~~~~~
tests/negative/importC_test.toit:5:22: note: Cannot read 'tests/negative/relative_dir/dir.toit': not a regular file
import .relative_dir.dir as pre
                     ^~~
tests/negative/importC_test.toit:6:1: error: Failed to import '.relative-dir.dir2'
import .relative_dir.dir2 as pre
^~~~~~
tests/negative/importC_test.toit:6:22: note: Folder 'tests/negative/relative_dir/dir2' exists, but is missing a 'dir2.toit' file
import .relative_dir.dir2 as pre
                     ^~~~
tests/negative/importC_test.toit:7:1: error: Failed to import '.relative-dir.dir2.foo'
import .relative_dir.dir2.foo as toto
^~~~~~
tests/negative/importC_test.toit:7:27: note: Missing library file. Tried 'tests/negative/relative_dir/dir2/foo.toit' and 'tests/negative/relative_dir/dir2/foo/foo.toit'
import .relative_dir.dir2.foo as toto
                          ^~~
tests/negative/importC_test.toit:8:1: error: Failed to import '.relative-dir.dir2.foo.bar'
import .relative_dir.dir2.foo.bar as toto
^~~~~~
tests/negative/importC_test.toit:8:27: note: Cannot enter 'tests/negative/relative_dir/dir2/foo': folder does not exist
import .relative_dir.dir2.foo.bar as toto
                          ^~~
tests/negative/importC_test.toit:9:1: error: Failed to import '.relative-dir.dir2.not-a-directory.bar'
import .relative_dir.dir2.not_a_directory.bar as toto
^~~~~~
tests/negative/importC_test.toit:9:27: note: Cannot enter 'tests/negative/relative_dir/dir2/not_a_directory': not a folder
import .relative_dir.dir2.not_a_directory.bar as toto
                          ^~~~~~~~~~~~~~~
Compilation failed.
